Migrated Choice -> JComboBox, removed Prompt (replaced with JOptionPane)